--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-pdf": "^5.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
